<resources>
    <string name="app_name" translatable="false">PowerHome</string>
    <string name="create_account_text">"Nouveau sur PowerHome? "</string>
    <string name="se_connecter_via_linkedin">Se connecter via LinkedIn</string>
    <string name="cree_un_compte">CRÉE UN COMPTE</string>
    <string name="ou">OU</string>
    <string name="se_connecter">Se Connecter</string>
    <string name="mot_de_passe_oubli">MOT DE PASSE OUBLIÉ ?</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="pr_nom">Prénom</string>
    <string name="l_name">Nom</string>
    <string name="mobile">Mobile</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="splashname" translatable="false">PowerHome</string>
    <string name="create_account_btn">Créez un compte</string>
    <string name="nouveau_mot_de_passe">Entrez un nouveau mot de passe</string>
    <string name="confirmer_mot_de_passe">Confimer le mot de passe</string>
    <string name="envoyer">Confirmer</string>
    <string name="retour_connexion">Retourner à la connexion</string>
    <string name="first_item">Mon Habitat\n</string>
    <string name="second_item">Paramètres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close\n</string>
    <string name="third_item">Mes Notifications</string>
    <string name="nav_fourth_item">Mes preferences</string>

</resources>