<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reset_password"
    android:background="@drawable/login_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account" />

        <!-- Nouveau mot de passe -->
        <EditText
            android:id="@+id/new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/nouveau_mot_de_passe"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawablePadding="10dp" />

        <!-- Confirmer le mot de passe -->
        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/confirmer_mot_de_passe"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawablePadding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/envoyer"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/reset_password_btn" />

        <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour_connexion"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onBackToLoginClick" />

    </LinearLayout>
</RelativeLayout>
