<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cr_er_un_compte"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        >
    </TextView>
    <ImageView
        android:id="@+id/icon_account"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/icon_account"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/firstname_input"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pr_nom"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textPersonName"
        android:layout_toEndOf="@id/icon_account"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/l_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:padding="18dp"
        android:inputType="textPersonName"
        android:layout_toEndOf="@id/icon_account"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/firstname_input"/>
    <ImageView
        android:id="@+id/icon_email"
        android:layout_marginStart="5dp"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_dialog_email"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/email_input"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/icon_account"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/lastname_input"/>
    <ImageView
        android:id="@+id/icon_password"
        android:layout_marginStart="5dp"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_lock_idle_lock"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/password_input"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/icon_account"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/email_input"/>

    <ImageView
        android:id="@+id/icon_phone"
        android:layout_marginStart="5dp"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_menu_call"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/number_spinner"
        android:layout_marginEnd="10dp"/>
    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="40dp"
        android:padding="18dp"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/number_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:layout_toEndOf="@id/number_spinner"
        android:hint="@string/mobile"
        android:inputType="number"
        android:padding="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_alignBaseline="@id/number_spinner"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/cr_er_un_compte"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:id="@+id/register_btn"
        android:layout_below="@id/number_spinner"
        />


</RelativeLayout>
