<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/icon_account">
    </ImageView>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/e_mail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_corner"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/round_corner"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:padding="18dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawablePadding="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:onClick="onForgotPasswordClick"
            android:hint="@string/mot_de_passe_oubli"
            android:layout_gravity="end"
            android:background="@android:color/transparent"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/se_connecter"
            android:onClick="onClickCreateAccount"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:padding="12dp"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:id="@+id/login_btn"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"/>

            <Button
                android:id="@+id/create_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:onClick="onForgotPasswordClick"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:text="@string/create_account_btn"
                android:textColor="@color/indigo"
                android:textStyle="bold">
            </Button>


        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <View
                android:id="@+id/lineLeft"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvOr"
                app:layout_constraintTop_toTopOf="@id/tvOr"
                app:layout_constraintBottom_toBottomOf="@id/tvOr" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/lineLeft"
                app:layout_constraintEnd_toStartOf="@id/lineRight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/lineRight"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvOr"
                app:layout_constraintBottom_toBottomOf="@id/tvOr" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnGoogleLogin"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:src="@mipmap/icon_google"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnLinkedInLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:src="@mipmap/icon_linkedin"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"/>
            <ImageButton
                android:id="@+id/btnMetaLogin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:src="@mipmap/icon_meta"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>



    
</RelativeLayout>